migrating to jdk17